# agents-docs-sync

./: .dockerignore  .gitignore  AGENTS.md  BENCHMARK_PLAN.md  BUGFIX_SUMMARY.md  Dockerfile  LICENSE  MANIFEST.in  PROJECT_MANAGEMENT_GUIDE.md  RAG_CHUNKER_FIX.md  README.md  RELEASE.md  REVIEW_REPORT.md  benchmark.md  debug_collector.py  install.sh  pyproject.toml  pytest.ini  requirements-docgen.txt  requirements-test.txt  setup.sh  sitecustomize.py  verify_commands.py
.docgen/: .gitignore  __init__.py  config.yaml  config.yaml.sample  docgen.py
.docgen/collectors/: project_info_collector.py
.docgen/detectors/: base_detector.py  javascript_detector.py  python_detector.py
.docgen/generators/: __init__.py  agents_generator.py  api_generator.py  readme_generator.py
.docgen/hooks/: post-commit  pre-commit  pre-push
.docgen/utils/: cache.py  logger.py
.github/workflows/: ci-cd-pipeline.yml  release.yml
agents_docs_sync/: __init__.py
docgen/: .gitignore  __init__.py  base_generator.py  cli.py  cli_handlers.py  config.toml.sample  config.yaml  config.yaml.sample  config_manager.py  detector_config_loader.py  docgen.py  document_generator.py  generator_factory.py  hooks.toml  hooks.yaml  language_detector.py  models.py
docgen/archgen/: __init__.py  cli.py  models.py  renderer.py  scanner.py
docgen/benchmark/: __init__.py  comparator.py  core.py  models.py  recorder.py  reporter.py  utils.py
docgen/cli/: __init__.py  base_command.py  parser.py  runner.py
docgen/collectors/: __init__.py  base_collector.py  coding_standards_collector.py  collector_utils.py  command_help_extractor.py  dependency_collector.py  language_info_collector.py  project_info_collector.py  structure_analyzer.py  test_command_collector.py
docgen/config/: __init__.py  config_accessor.py
docgen/detectors/: __init__.py  base_detector.py  config_loader.py  detector_config.py  detector_patterns.py  generic_detector.py  go_detector.py  javascript_detector.py  plugin_registry.py  python_detector.py  unified_detector.py
docgen/generators/: __init__.py  agents_generator.py  api_generator.py  base_generator.py  commit_message_generator.py  contributing_generator.py  readme_generator.py  service_factory.py
docgen/hooks/: commit-msg  config.py  orchestrator.py  post-commit  pre-commit  pre-push  registry.py  utils.py
docgen/models/: __init__.py  agents.py  api.py  base.py  cache.py  config.py  detected_language.py  detector.py  llm.py  project.py  readme.py
docgen/prompts/: agents_prompts.toml  agents_prompts.yaml  agents_prompts_en.toml  commit_message_prompts.toml  commit_message_prompts.yaml  readme_prompts.toml  readme_prompts.yaml  readme_prompts_en.toml
docgen/rag/: __init__.py  chunker.py  embedder.py  indexer.py  retriever.py  validator.py
docgen/templates/: agents_template.md.j2  contributing_template.md.j2  readme_template.md.j2  setup_template.md.j2
docgen/utils/: cache.py  config_utils.py  error.py  exceptions.py  file_scanner.py  file_utils.py  gitignore_parser.py  llm_client.py  llm_client_utils.py  llm_clients.py  logger.py  markdown_utils.py  outlines_utils.py  project_utils.py  prompt_loader.py  uv_utils.py
docgen/validators/: __init__.py  implementation_validator.py
docs/: CONFIG_GUIDE.md  CURSOR_GIT_HOOKS.md  DEVELOPER_GUIDE.md  IMPROVEMENT_PLAN_README_FIXES.md  PROJECT_MANAGEMENT_GUIDE.md  REFACTORING_PLAN.md  api.md  auto_atchitecture_generator.md  implement_rag.md
docs/.old/: ALGORITHM_IMPROVEMENTS.md  ARCHITECTURE_DETECTOR_FIX.md  CHANGELOG_IMPROVEMENTS.md  GENERALIZATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  RAG_RELEVANCE_LOGIC.md  benchmark.md  benchmark.old.md  improvement_plan_documentation_validation.md
docs/architecture/: architecture.mmd  architecture_diagram.md  architecture_manifest.yml
docs/implementation/: IMPLEMENTATION_GUIDE.md  agents-spec-migration-guide.md  auto_architecture_generator.md  step1-agents-generator.md  step10-agents-config-extension.md  step11-agents-template.md  step12-agents-generator-refactor.md  step13-agents-testing.md  step2-config-extension.md  step3-docgen-extension.md  step4-test-script.md  step5-pipeline-script.md  step6-github-actions.md  step7-local-testing.md  step8-github-testing.md  step9-project-info-collector.md
docs/review/: README.md  code-refactoring-review.md  phase1-structure-review.md  phase2-core-review.md  phase3-tests-review.md  phase5-security-performance-review.md  phase6-documentation-review.md  review-report.md
schemas/: agents_schema.json  readme_schema.json
scripts/: disable_hooks.sh  enable_hooks.sh  fix_hooks.sh  generate_requirements.py  install_hooks.sh  release.sh  run_format.sh  run_lint.sh  run_pipeline.sh  run_tests.sh  verify_language_detector.py
tests/: .gitignore  conftest.py  test_cli.py  test_config_manager.py  test_config_manager_detectors.py  test_docgen.py  test_docgen_extended.py  test_document_generator.py  test_edge_cases.py  test_exceptions.py  test_generator_factory.py  test_init.py  test_integration.py  test_language_detector.py  test_project_info_collector.py  test_utils.py
tests/e2e/: conftest.py
tests/fixtures/: __init__.py
tests/helpers/: __init__.py  assertions.py  builders.py
tests/integration/: conftest.py  test_benchmark.py  test_config_manager.py  test_document_generator.py  test_edge_cases.py  test_integration.py  test_language_info_collector.py  test_project_info_collector.py
tests/rag/: __init__.py  test_chunker.py  test_embedder.py  test_indexer.py  test_validator.py
tests/test_collectors/: test_coding_standards_collector.py  test_dependency_collector.py  test_test_command_collector.py
tests/test_config/: test_config_accessor.py
tests/test_detectors/: __init__.py  test_config_loader.py  test_generic_detector.py  test_go_detector.py  test_hybrid_detection.py  test_javascript_detector.py  test_plugin_registry.py  test_python_detector.py  test_unified_detector.py
tests/test_edges/: test_boundaries.py  test_symlinks.py
tests/test_generators/: __init__.py  test_agents_generator.py  test_agents_generator_extended.py  (+6 more)
(+91 files in other folders)
