[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-docs-sync"
version = "0.0.5"
description = "GitHub にプッシュされた変更をトリガーに、テスト実行・ドキュメント生成・AGENTS.md の自動更新を行うパイプライン"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "塩ハム(d)"}
]
keywords = [
    "documentation",
    "automation",
    "ci-cd",
    "github-actions",
    "api-documentation",
    "readme-generator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
agents-docs-sync = "docgen.docgen:main"

[tool.uv]
default-groups = ["default"]

[dependency-groups]
# ドキュメント生成システム用の依存関係
docgen = [
    "pyyaml>=6.0.3",
    # tomliはPython 3.11未満でのみ必要（Python 3.11以降ではtomllibを使用）
    # Python 3.10以前のサポートが必要な場合は、以下のコメントを外してください
    # "tomli>=2.0.0; python_version<'3.11'",
]

# テスト用の依存関係
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]

# 開発用の依存関係（テストとドキュメント生成を含む）
default = [
    {include-group = "docgen"},
    {include-group = "test"}
]

[tool.setuptools]
package-dir = {"docgen" = ".docgen"}
packages = ["docgen", "docgen.collectors", "docgen.detectors", "docgen.generators", "docgen.generators.parsers", "docgen.utils"]

[tool.setuptools.package-data]
"docgen" = [
    "config.yaml.sample",
    "templates/**/*",
    "hooks/*",
]
